--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="/Calculadora/style.css">
+    <link rel="stylesheet" href="/Calculadora/nav.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>GLV |calculadora</title>
 </head>
@@ -17,8 +17,8 @@
 		</label>
 		<label class="logo">G.L.V Tools</label>
 		<ul>
-			<li><a class="activ" href="/GLV/index.html">Início</a></li>
-			<li><a href="/GLV/Newtasks/newtask.html">newtask "só no pc"</a></li>
+			<li><a class="activ" href="/index.html">Início</a></li>
+			<li><a href="/Newtasks/newtask.html">newtask "só no pc"</a></li>
 			<li><a href="#"></a></li>
 			<li><a href="#"></a></li>
 		</ul>
@@ -51,5 +51,5 @@
         </div>
 	</section>
 </body>
-<script src="./calculadora.js"></script>
+<script src="/Calculadora/calculadora.js"></script>
 </html>
