--- a/Newtasks/newtask.html
+++ b/Newtasks/newtask.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GLV | newtask</title>
-    <link rel="stylesheet" href="/GLV/Newtasks/newtask.css">
-    <link rel="stylesheet" href="/GLV/Newtasks/nav.css">
+    <link rel="stylesheet" href="/Newtasks/newtask.css">
+    <link rel="stylesheet" href="/Newtasks/nav.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
@@ -17,8 +17,8 @@
 </label>
 <label class="logo">G.L.V Tools</label>
 <ul>
-  <li><a class="activ" href="/GLV/index.html">Início</a></li>
-  <li><a href="/GLV/Calculadora/index.html">Calculadora</a></li>
+  <li><a class="activ" href="/index.html">Início</a></li>
+  <li><a href="/Calculadora/index.html">Calculadora</a></li>
   <li><a href="#"></a></li>
   <li><a href="#"></a></li>
 </ul>
@@ -37,7 +37,7 @@
     </div>
   </div>
 
-  <script src="/GLV/Newtasks/app.js"></script>
+  <script src="/Newtasks/app.js"></script>
 
 </body>
 </html>
