--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GLV Tools</title>
-    <link rel="stylesheet" href="/GLV/nav.css">
-    <link rel="stylesheet" href="/GLV/inicio.css">
+    <link rel="stylesheet" href="/nav.css">
+    <link rel="stylesheet" href="/index.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
@@ -17,8 +17,8 @@
 </label>
 <label class="logo">G.L.V   Tools</label>
 <ul>
-  <li><a class="a" href="/GLV/Newtasks/newtask.html">newtask "só no pc"</a></li>
-  <li><a class= "a" href="/GLV/Calculadora/index.html">Calculadora</a></li>
+  <li><a class="a" href="/Newtasks/newtask.html">newtask "só no pc"</a></li>
+  <li><a class= "a" href="/Calculadora/index.html">Calculadora</a></li>
   <li><a class="a"href="#"></a></li>
   <li><a class="a"href="#"></a></li>
 </ul>
@@ -29,7 +29,7 @@
   </p>
   <p><strong>1 e uma Calculadora</strong> ele funciona no celular e no pc.</p>
   <p><strong>2 e uma lista de tarefas</strong> só funciona no pc por enquanto.</p>
-  <p>caso queira ver as pastas do prejeto aqui esta o <a href="https://github.com/GLV03?tab=repositories">link</a>.
+  <p>caso queira ver as pastas do prejeto aqui esta o <a href="https://github.com/GLV03/GLV03.github.io">link</a>.
 </div>
 </body>
 </html>
