--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <label for="check" class="checkbtn">
   <i class="fas fa-bars"></i>
 </label>
-<label class="logo">G.L.V   Tools</label>
+<label class="logo">G.L.V </label>
 <ul>
-  <li><a class="a" href="/Newtasks/newtask.html">newtask "só no pc"</a></li>
+  <li><a class="a" href="/Newtasks/newtask.html">newtask</a></li>
   <li><a class= "a" href="/Calculadora/index.html">Calculadora</a></li>
   <li><a class="a"href="#"></a></li>
   <li><a class="a"href="#"></a></li>
@@ -25,7 +25,7 @@
 </nav>
 <div class="texto">
   <h1>Seja bem vindo!</h1>
-  <p>Este aqui meu pequeno site para postar meus projetos espero que goste, em cima você encontrara 2 projetos meus.
+  <p>Este aqui meu pequeno site para postar meus projetos espero que goste, em cima você encontrara 2 projetos meus, que ainda estão em beta.
   </p>
   <p><strong>1 e uma Calculadora</strong> ele funciona no celular e no pc.</p>
   <p><strong>2 e uma lista de tarefas</strong> só funciona no pc por enquanto.</p>
