--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -15,10 +15,10 @@
 		<label for="check" class="checkbtn">
 			<i class="fas fa-bars"></i>
 		</label>
-		<label class="logo">G.L.V Tools</label>
+		<label class="logo">G.L.V</label>
 		<ul>
 			<li><a class="activ" href="/index.html">Início</a></li>
-			<li><a href="/Newtasks/newtask.html">newtask "só no pc"</a></li>
+			<li><a href="/Newtasks/newtask.html">newtask</a></li>
 			<li><a href="#"></a></li>
 			<li><a href="#"></a></li>
 		</ul>
