--- a/Newtasks/newtask.html
+++ b/Newtasks/newtask.html
@@ -15,7 +15,7 @@
 <label for="check" class="checkbtn">
   <i class="fas fa-bars"></i>
 </label>
-<label class="logo">G.L.V Tools</label>
+<label class="logo">G.L.V</label>
 <ul>
   <li><a class="activ" href="/index.html">Início</a></li>
   <li><a href="/Calculadora/index.html">Calculadora</a></li>
