--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -9,7 +9,6 @@
     <title>GLV |calculadora</title>
 </head>
 <body>
-    
     <nav>
         <input type="checkbox" id="check">
 		<label for="check" class="checkbtn">
@@ -30,11 +29,11 @@
                 <button id="limparDisplay">CE</button>
                 <button id="limparCalculo">C</button>
                 <button id="backspace">«</button>
-                <button id="operadorDividir">/</button>
+                <button id="operadorDividir">%</button>
                 <button id="tecla7">7</button>
                 <button id="tecla8">8</button>
                 <button id="tecla9">9</button>
-                <button id="operadorMultiplicar">*</button>
+                <button id="operadorMultiplicar">X</button>
                 <button id="tecla4">4</button>
                 <button id="tecla5">5</button>
                 <button id="tecla6">6</button>
